# Linux_monitor

./: .gitignore  CREDITS.md  Cargo.toml  README.md
assets/: style.css
packaging/: linux-monitor.desktop
plugins/: temperature_alert.rhai
src/: autostart.rs  config.rs  engine.rs  instance.rs  locale.rs  main.rs
src/history/: mod.rs  store.rs
src/monitor/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  thermal.rs
src/plugin/: mod.rs
src/ui/: app.rs  controller.rs  floating_window.rs  history_window.rs  icon.rs  mod.rs  settings.rs  theme.rs  tray.rs
src/ui/skins/: ambient.rs  aurora.rs  compact.rs  draw.rs  glass.rs  horizontal.rs  mod.rs  refined.rs  rings.rs  template.rs  vertical.rs
