[package]
name = "linux-monitor"
version = "0.1.0"
edition = "2021"
description = "Linux desktop hardware performance monitor with floating widget and Chinese localization"
license = "GPL-3.0-or-later"

[dependencies]
# GTK3 UI (native set_keep_above, begin_move_drag)
gtk = { version = "0.18", package = "gtk", features = ["v3_24"] }
gio = "0.18"
cairo = { version = "0.18", package = "cairo-rs" }
pangocairo = "0.18"

# System monitoring
sysinfo = "0.30"
libc = "0.2"

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.10"

# History storage (Phase 3)
rusqlite = { version = "0.31", features = ["bundled"] }

# Plugin system (Phase 4)
rhai = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
